--- a/StreamTools/StreamTools/Components/Login.razor
+++ b/StreamTools/StreamTools/Components/Login.razor
@@ -1,52 +1,49 @@
-﻿<Card VerticalAlignment="VerticalAlignment.Middle" 
-      Flex="Flex.AlignItems.Center">
-    <CardBody>
-        <CardTitle Size="3">
-            Log in to get started
-        </CardTitle>
-    </CardBody>
-    <CardBody>
-        <Form>
-            <Field>
-                <FieldLabel>Email</FieldLabel>
-                <FieldBody>
-                    <Addons>
-                        <Addon AddonType="AddonType.Start">
-                            <AddonLabel>
-                                <Icon Name="IconName.Mail" />
-                            </AddonLabel>
-                            <Addon AddonType="AddonType.Body">
-                                <TextEdit Role="TextRole.Email" Autofocus="true" Placeholder="@("you@somewebsite.com")" @bind-Text="email" />
+﻿<Modal @ref="lazyReloadModalRef" RenderMode="ModalRenderMode.LazyReload" Animated="true">
+    <ModalContent Background="Background.Secondary" Size="ModalSize.Small" Centered>
+        <ModalHeader>
+            <ModalTitle Size="HeadingSize.Is4">
+                Log in to get started
+            </ModalTitle>
+            <CloseButton />
+        </ModalHeader>
+        <ModalBody>
+            <Form>
+                <Field>
+                    <FieldLabel>Email</FieldLabel>
+                    <FieldBody>
+                        <Addons>
+                            <Addon AddonType="AddonType.Start">
+                                <AddonLabel>
+                                    <Icon Name="IconName.Mail" />
+                                </AddonLabel>
+                                <Addon AddonType="AddonType.Body">
+                                    <TextEdit Role="TextRole.Email" Autofocus="true" Placeholder="@("you@somewebsite.com")" @bind-Text="email" />
+                                </Addon>
                             </Addon>
-                        </Addon>
-                    </Addons>
-                </FieldBody>
-            </Field>
-            <Field>
-                <FieldLabel>Password</FieldLabel>
-                <FieldBody>
-                    <Addons>
-                        <Addon AddonType="AddonType.Start">
-                            <AddonLabel>
-                                <Icon Name="IconName.Lock" />
-                            </AddonLabel>
-                            <Addon AddonType="AddonType.Body">
-                                <TextEdit Role="TextRole.Password" @bind-Text="password" />
+                        </Addons>
+                    </FieldBody>
+                </Field>
+                <Field>
+                    <FieldLabel>Password</FieldLabel>
+                    <FieldBody>
+                        <Addons>
+                            <Addon AddonType="AddonType.Start">
+                                <AddonLabel>
+                                    <Icon Name="IconName.Lock" />
+                                </AddonLabel>
+                                <Addon AddonType="AddonType.Body">
+                                    <TextEdit Role="TextRole.Password" @bind-Text="password" />
+                                </Addon>
                             </Addon>
-                        </Addon>
-                    </Addons>
-                </FieldBody>
-            </Field>
-        </Form>
-    </CardBody>
-    <CardActions>
-        <Button Type="ButtonType.Submit" Color="Color.Primary" Shadow="Shadow.Default">
-            Login <Icon Name="IconName.LockOpen" />
-        </Button>
-    </CardActions>
-</Card>
-@code
-{
-    private string email;
-    private string password;
-}
+                        </Addons>
+                    </FieldBody>
+                </Field>
+            </Form>
+        </ModalBody>
+        <ModalFooter>
+            <Button Type="ButtonType.Submit" Color="Color.Primary" Shadow="Shadow.Default">
+                Login <Icon Name="IconName.LockOpen" />
+            </Button>
+        </ModalFooter>
+    </ModalContent>
+</Modal>
